name:               data-filepath-lens
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Maxwell Swadling
maintainer:         Dom De Re
copyright:          Copyright (C) 2014
synopsis:           Lens extensions for data-filepath
category:           Data
description:        Lens extensions for data-filepath
homepage:           https://github.com/domdere/data-filepath-lens/issues
bug-reports:        https://github.com/domdere/data-filepath-lens/issues
cabal-version:      >= 1.18
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/data-filepath-lens

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:    Data.FilePath.Lens

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   QuickCheck          == 2.7.6
                    ,   data-filepath-lens


test-suite              hlint
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     hlint
    build-depends:      base
                    ,   hlint               == 1.8.*
